# MemoryScope

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileArm  LICENSE  README.md  README_ZH.md  benchmark.py  clear-vector-store.py  docker-compose.yml  pyproject.toml  quick-start-demo.py  quick_start_demo.py  requirements.txt  setup.py  test.py  tt.py
benchmark/: BillGates.csv  benchmark_config.yaml
config/: cli_chat_dash_cn.yaml  config.json  config.yaml  config_show.json  demo_config.yaml  demo_config2.yaml  demo_config_cn.yaml  demo_config_en.yaml  demo_config_no_stream.yaml  global_config.json  prompt.json  test_config.yaml  worker.json  worker_config.json  workers.json
docs/: Installation.md  README.md  contribute.md  contribute_zh.md  installation.md  installation_zh.md
en/: .buildinfo  README.html  genindex.html  index.html  memoryscope.constants.common_constants.html  memoryscope.constants.html  memoryscope.constants.language_constants.html  memoryscope.core.chat.api_memory_chat.html  memoryscope.core.chat.base_memory_chat.html  memoryscope.core.chat.cli_memory_chat.html  memoryscope.core.chat.html  memoryscope.core.config.arguments.html  memoryscope.core.config.config_manager.html  memoryscope.core.config.html  memoryscope.core.html  memoryscope.core.memoryscope.html  memoryscope.core.memoryscope_context.html  memoryscope.core.models.base_model.html  memoryscope.core.models.dummy_generation_model.html  memoryscope.core.models.html  memoryscope.core.models.llama_index_embedding_model.html  memoryscope.core.models.llama_index_generation_model.html  memoryscope.core.models.llama_index_rank_model.html  memoryscope.core.operation.backend_operation.html  memoryscope.core.operation.base_operation.html  memoryscope.core.operation.base_workflow.html  memoryscope.core.operation.consolidate_memory_op.html  memoryscope.core.operation.frontend_operation.html  memoryscope.core.operation.html  memoryscope.core.service.base_memory_service.html  memoryscope.core.service.html  memoryscope.core.service.memory_scope_service.html  memoryscope.core.storage.base_memory_store.html  memoryscope.core.storage.base_monitor.html  memoryscope.core.storage.dummy_memory_store.html  memoryscope.core.storage.dummy_monitor.html  memoryscope.core.storage.html  memoryscope.core.storage.llama_index_es_memory_store.html  memoryscope.core.storage.llama_index_sync_elasticsearch.html  memoryscope.core.utils.datetime_handler.html  (+48 more)
memory_scope/: __init__.py  _version.py  cli.py  cli_job.py  config.py  job.py
memoryscope/: __init__.py  cli.py  memoryscope.py  memoryscope_context.py
old/: dash_generate_client.py  dash_rerank_client.py  elastic_search_client.py  memory_wrap_node.py  tool_functions.py  user_attribute.py  user_profile_handler.py
tests/: es_test2.py  llama_index_es_memory_store.py  test_dash_api.py  test_memory.py  thread_test.py  thread_test2.py
zh/: .buildinfo  README.html  genindex.html  index.html  memoryscope.constants.common_constants.html  memoryscope.constants.html  memoryscope.constants.language_constants.html  memoryscope.core.chat.api_memory_chat.html  memoryscope.core.chat.base_memory_chat.html  memoryscope.core.chat.cli_memory_chat.html  memoryscope.core.chat.html  memoryscope.core.config.arguments.html  memoryscope.core.config.config_manager.html  (+75 more)
(+956 files in other folders)
