[tool.poetry]
name = "memoryscope"
version = "0.1.0"
description = "MemoryScope for LLM Agentic Application."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index-core = "0.10.45"
llama-index-embeddings-dashscope = "0.1.3"
llama-index-llms-dashscope = "0.1.2"
llama-index-postprocessor-dashscope-rerank-custom = "0.1.0"
llama-index-vector-stores-elasticsearch = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
