[tool.poetry]
name = "memory_scope"
version = "0.1.0"
description = "MemoryScope for LLM Agentic Application."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
keywords = ["Memory", "LLM"]

[tool.poetry.dependencies]
python = "^3.10"
llama-index-core = "0.10.44"
llama-index-embeddings-dashscope = "0.1.3"
llama-index-llms-dashscope = "0.1.2"
llama-index-postprocessor-dashscope-rerank-custom = "0.1.0"
llama-index-vector-stores-elasticsearch = "0.2.0"
pyfiglet = ">=1.0.2,<1.1.0"
termcolor = ">=2.4.0,<2.5.0"
llama-index = "0.10.45"
fire = "0.6.0"
questionary = "2.0.1"
requests = ">=2.31.0,<2.32.0"
pydantic = ">=2.7.1,<2.8.0"
dashscope = ">=1.19.1,<1.20.0"
elasticsearch = ">=8.14.0,<8.15.0"
pyyaml = ">=6.0.1,<6.1.0"
ray = ">=2.31.0,<2.32.0"
numpy = ">=1.26.4,<1.27.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
codespell = "^2.3.0"

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words-list = "astroid,gallary,momento,narl,ot,rouge"
skip = "./examples,*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
