[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words-list = "astroid,gallary,momento,narl,ot,rouge"
skip = "./examples,*.csv,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb"

[tool.poetry]
name = "memoryscope"
version = "0.1.0.5"
description = "MemoryScope for LLM Agentic Application."
authors = [
  "jinli <jinli.yl@alibaba-inc.com>",
  "qiantiancheng <qiantiancheng.qtc@alibaba-inc.com>",
  "fuqingxu <fuqingxu.fqx@alibaba-inc.com>"
]
license = "Apache"
readme = "README.md"
keywords = ["Memory", "LLM"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
llama-index-core = ">=0.10.45"
llama-index-embeddings-dashscope = ">=0.1.3"
llama-index-llms-dashscope = ">=0.1.2"
llama-index-postprocessor-dashscope-rerank-custom = ">=0.1.0"
llama-index-vector-stores-elasticsearch = ">=0.2.0"
pyfiglet = ">=1.0.2"
termcolor = ">=2.4.0"
llama-index = ">=0.10.45"
fire = ">=0.6.0"
questionary = ">=2.0.1"
pydantic = ">=2.7.1"
dashscope = ">=1.19.1"
elasticsearch = ">=8.14.0"
pyyaml = ">=6.0.1"
numpy = ">=1.26.4"
rich = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
codespell = "^2.3.0"

[tool.poetry.scripts]
memoryscope = "memoryscope:cli"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"
